--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,4 +5,4 @@ services:
     ports:
       - 8000:80
     volumes:
-      - ./html/:usr/share/nginx/html/
+      - /c/Users/Acs/Desktop/Projets/Rick-Morty-Project:/usr/share/nginx
